# think-and-ship

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
crates/deliberate-mcp/: Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md
crates/deliberate-mcp/.github/workflows/: ci.yml  publish.yml
crates/deliberate-mcp/app/: package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
crates/deliberate-mcp/app/src/: App.svelte
crates/deliberate-mcp/app/src-tauri/: Cargo.toml  README.md  tauri.conf.json
crates/deliberate-mcp/app/src-tauri/icons/: README.md
crates/deliberate-mcp/app/src-tauri/src/: commands.rs  main.rs  state.rs
crates/deliberate-mcp/app/src-tauri/src/source/: file.rs  mod.rs  resolute_socket.rs  socket.rs
crates/deliberate-mcp/app/src/lib/branches/: BranchNav.svelte
crates/deliberate-mcp/app/src/lib/graph/: DagView.svelte
crates/deliberate-mcp/app/src/lib/styles/: tokens.css
crates/deliberate-mcp/app/src/lib/titlebar/: TitleBar.svelte
crates/deliberate-mcp/scripts/: migrate_default_to_sessions.py  migrate_to_project_namespace.py
crates/deliberate-mcp/src/: broadcast.rs  config.rs  constants.rs  formatter.rs  lib.rs  main.rs  persistence.rs  server.rs  types.rs
crates/deliberate-mcp/src/domain/: branch.rs  history.rs  step.rs
crates/deliberate-mcp/src/engine/: branching.rs  core.rs  export.rs  impact.rs  lookup.rs  mutations.rs  numbering.rs  process.rs  revisions.rs  sessions.rs  snapshots.rs  validation.rs
crates/deliberate-mcp/src/mcp/: args.rs  handlers.rs  instructions.rs  mod.rs  service.rs
crates/deliberate-mcp/src/output_schemas/: error_envelope.rs  mod.rs  record_step.rs  search_trace.rs  step_impact.rs  trace_checkpoint.rs
crates/deliberate-mcp/src/util/: text.rs
crates/deliberate-mcp/tests/: broadcast.rs  config.rs  formatter.rs  mcp_schema.rs  server.rs
crates/resolute-mcp/: Cargo.toml
crates/resolute-mcp/src/: broadcast.rs  lib.rs  main.rs  persistence.rs
crates/resolute-mcp/src/domain/: artifact.rs  objective.rs
crates/resolute-mcp/src/engine/: mod.rs
crates/resolute-mcp/src/mcp/: handlers.rs  mod.rs  service.rs
crates/resolute-mcp/src/output_schemas/: mod.rs
crates/resolute-mcp/tests/: engine.rs  mcp_schema.rs  persistence.rs
crates/think-and-ship/: Cargo.toml
crates/think-and-ship-core/: Cargo.toml
crates/think-and-ship-core/src/: lib.rs  project_id.rs
crates/think-and-ship-viewer/: index.html  package.json
crates/think-and-ship-viewer/src/: main.ts
crates/think-and-ship-viewer/src-tauri/: Cargo.toml  README.md  tauri.conf.json
crates/think-and-ship-viewer/src-tauri/capabilities/: default.json
crates/think-and-ship-viewer/src-tauri/src/: commands.rs  main.rs  state.rs
crates/think-and-ship-viewer/src-tauri/src/source/: file.rs  socket.rs
crates/think-and-ship-viewer/src/lib/: types.ts
crates/think-and-ship-viewer/src/lib/checkpoint/: CheckpointView.svelte
crates/think-and-ship-viewer/src/lib/detail/: StepDetail.svelte
crates/think-and-ship-viewer/src/lib/empty/: EmptyState.svelte
crates/think-and-ship-viewer/src/lib/status/: StatusBar.svelte
crates/think-and-ship-viewer/src/lib/store/: trace.svelte.ts
crates/think-and-ship-viewer/src/lib/styles/: reset.css
crates/think-and-ship-viewer/src/lib/trace/: Timeline.svelte
crates/think-and-ship/src/: env_compat.rs  lib.rs  main.rs  migrate.rs
crates/think-and-ship/src/cli/: mod.rs
crates/think-and-ship/src/engine/: broadcast.rs  cross_ref.rs  mod.rs  persistence.rs  session.rs
crates/think-and-ship/src/infra/: broadcast.rs  mod.rs  persistence.rs  project_id.rs  repo_sync.rs
crates/think-and-ship/src/mcp/: families.rs  mod.rs  unified.rs
crates/think-and-ship/src/ship/: broadcast.rs  mod.rs  persistence.rs
crates/think-and-ship/src/ship/domain/: action.rs  check.rs  mod.rs  task.rs
crates/think-and-ship/src/ship/engine/: mod.rs
crates/think-and-ship/src/ship/mcp/: handlers.rs  mod.rs  service.rs
crates/think-and-ship/src/ship/output_schemas/: mod.rs
crates/think-and-ship/src/think/: broadcast.rs  config.rs  formatter.rs  mod.rs  persistence.rs
crates/think-and-ship/src/think/domain/: dep_edge.rs  mod.rs  session.rs
crates/think-and-ship/src/think/engine/: branching.rs  core.rs  export.rs  impact.rs  lookup.rs  mod.rs  mutations.rs  numbering.rs  process.rs  recovery.rs  revisions.rs  sessions.rs  snapshots.rs  validation.rs
crates/think-and-ship/src/think/mcp/: args.rs  handlers.rs  instructions.rs  mod.rs  service.rs
crates/think-and-ship/src/think/output_schemas/: engine_status.rs  mod.rs  mutations.rs  record_step.rs
crates/think-and-ship/src/think/util/: mod.rs
crates/think-and-ship/tests/: http_transport.rs  persistence_no_collision.rs  repo_sync_ship_e2e.rs  repo_sync_think_e2e.rs  ship_engine.rs  ship_mcp.rs  ship_persistence.rs  think_and_ship_e2e.rs  think_broadcast.rs  think_config.rs  think_engine.rs  think_formatter.rs  think_mcp.rs  unified_service.rs
docs/: ARCHITECTURE.md  REGISTRY_SUBMISSIONS.md  RELEASE_NOTES_v0.2.0.md  RELEASING.md  SCHEMA.md
docs/deploy/: Dockerfile  setup-release-plz-token.sh
docs/deploy/homebrew/: think-and-ship.rb
docs/deploy/hooks/: pre-commit
npm/deliberate-mcp/: README.md  install.js  package.json
npm/resolute-mcp/: README.md  install.js  package.json
npm/think-and-ship/: README.md  cli.js  install.js  package.json
