[package]
name = "deliberate-mcp"
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
description = "MCP server for structured, branching, revisable reasoning — record deliberation traces step by step"
license = "MIT"
repository = "https://github.com/AlrikOlson/think-and-ship"
homepage = "https://github.com/AlrikOlson/think-and-ship"
readme = "README.md"
keywords = ["mcp", "reasoning", "llm", "deliberation", "ai"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "deliberate-mcp"
path = "src/main.rs"

[dependencies]
think-and-ship-core = { version = "0.1.0", path = "../think-and-ship-core" }
rmcp = { version = "1.7", features = ["server", "transport-io", "macros", "schemars"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "signal", "time", "net", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
owo-colors = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true


