[package]
name = "deliberate-mcp"
version = "0.3.2"
edition = "2024"
rust-version = "1.88"
description = "DEPRECATED: merged into the unified `think-and-ship` crate as of v0.2.0. The binary now prints a redirect and exits non-zero; library types are preserved for the migration window. Install `think-and-ship` instead."
license = "MIT"
repository = "https://github.com/AlrikOlson/think-and-ship"
homepage = "https://github.com/AlrikOlson/think-and-ship"
readme = "README.md"
keywords = ["mcp", "reasoning", "llm", "deliberation", "ai"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "deliberate-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.7", features = ["server", "transport-io", "macros", "schemars"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "signal", "time", "net", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
owo-colors = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

