[package]
name = "resolute-mcp"
version = "0.1.2"
description = "DEPRECATED: merged into the unified `think-and-ship` crate as of v0.2.0. The binary now prints a redirect and exits non-zero; library types are preserved for the migration window. Install `think-and-ship` instead."
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "resolute_mcp"
path = "src/lib.rs"

[[bin]]
name = "resolute-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.7", features = ["server", "transport-io", "macros", "schemars"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "signal", "net", "sync", "time"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
