[package]
name = "think-and-ship-core"
version = "0.1.0"
description = "Shared protocol types for the think-and-ship suite (deliberate-mcp + resolute-mcp)"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
