[package]
name = "think-and-ship"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
description = "Unified MCP server for structured reasoning + execution tracking — the merged successor to deliberate-mcp and resolute-mcp"
license = "MIT"
repository = "https://github.com/AlrikOlson/think-and-ship"
homepage = "https://github.com/AlrikOlson/think-and-ship"
keywords = ["mcp", "reasoning", "execution", "llm", "ai"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "think_and_ship"
path = "src/lib.rs"

[[bin]]
name = "think-and-ship"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "net", "sync", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
schemars = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
owo-colors = "4"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
rmcp = { version = "1.7", features = ["server", "transport-io", "macros", "schemars"] }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
