[package]
name = "think-and-ship-viewer"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
description = "Live desktop viewer for think-and-ship reasoning + execution traces (Tauri 2)"
license = "MIT"
publish = false

[[bin]]
name = "think-and-ship-viewer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# The viewer still consumes the *library* types from deliberate-mcp and
# resolute-mcp for the wire-format BroadcastFrame / DeliberateHistory.
# Those library types are preserved in the deprecated stubs through
# v0.2.x. v0.3.0 should switch to think-and-ship's domain re-exports
# and drop these path deps.
deliberate-mcp = { path = "../../deliberate-mcp" }
resolute-mcp = { path = "../../resolute-mcp" }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "net", "fs", "sync", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
notify = "8"
notify-debouncer-full = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
