[package]
name = "deliberate-app"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Live viewer for deliberate-mcp reasoning traces (Tauri 2 desktop app)"
license = "MIT"
publish = false

[[bin]]
name = "deliberate-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
deliberate-mcp = { path = "../.." }
resolute-mcp = { path = "../../../resolute-mcp" }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "net", "fs", "sync", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
notify = "8"
notify-debouncer-full = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
